--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Pasta de vídeos baixados e seus frames
 videos_baixados/
-videos/
+songs/
 
 # Arquivos de ambiente virtual (comum em projetos Python)
 venv/
