--- a/config.json
+++ b/config.json
@@ -1,15 +1,21 @@
 {
     "baixar_videos_da_lista": false,
     "extrair_frames_dos_videos": false,
-    "baixar_audio_da_musica": true,
-    "analisar_batidas_do_audio": true, 
+    "baixar_audio_da_musica": false,
+    "analisar_batidas_do_audio": false,
     "filtrar_batidas_por_amplitude": {
-        "enabled": true, 
+        "enabled": false,
         "min_amplitude_percentage": 30 
     },
     "generate_edit_from_beats": {
-        "enabled": true,
-        "min_scene_duration_seconds": 0.0
+        "enabled": false,
+        "min_scene_duration_seconds": 0.0,
+        "use_scenes": true
     },
-    "criar_edit_final_do_json": true
+    "detectar_cortes_de_cena_video": {
+        "enabled": true,
+        "video_source_index": 0, 
+        "threshold": 27.0
+    },
+    "criar_edit_final_do_json": false
 }
