--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,35 @@
-opencv-python
-python-dotenv
-librosa
-yt-dlp
+audioop-lts==0.2.1
+audioread==3.0.1
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+decorator==5.2.1
+idna==3.10
+joblib==1.5.1
+lazy_loader==0.4
+librosa==0.11.0
+llvmlite==0.44.0
+msgpack==1.1.0
+numba==0.61.2
+numpy==2.2.6
+opencv-python==4.11.0.86
+packaging==25.0
+platformdirs==4.3.8
+pooch==1.8.2
+pycparser==2.22
+python-dotenv==1.1.0
+requests==2.32.3
+scenedetect==0.6.6
+scikit-learn==1.7.0
+scipy==1.15.3
+soundfile==0.13.1
+soxr==0.5.0.post1
+standard-aifc==3.13.0
+standard-chunk==3.13.0
+standard-sunau==3.13.0
+threadpoolctl==3.6.0
+tqdm==4.67.1
+typing_extensions==4.14.0
+urllib3==2.4.0
+yt-dlp==2025.5.22
