--- a/src/config/config.json
+++ b/src/config/config.json
@@ -5,24 +5,24 @@
     "analisar_batidas_do_audio": false,
     "filtrar_batidas_por_amplitude": {
         "enabled": false,
-        "min_amplitude_percentage": 25 
+        "min_amplitude_percentage": 25
     },
     "generate_edit_from_beats": {
         "enabled": false,
-        "min_scene_duration_seconds": 0.0,
+        "min_scene_duration_seconds": 0.5,
         "use_scenes": true
     },
     "detectar_cortes_de_cena_video": {
         "enabled": false,
-        "video_source_index": 0, 
+        "video_source_index": 0,
         "threshold": 27.0
     },
     "criar_edit_final_do_json": true,
     "output_qualities": [
         {
-            "name": "high",
+            "name": "default_gui",
             "crf": 20
         }
     ],
-    "movie_name": "Metropolis (Anime 2001)"
+    "movie_name": "Neon Genesis Evangelion\n -\n 1996"
 }
